# omg-idl-gen

./: Cargo.toml  README.md
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: audit.yml  coverage.yml  lint.yml  main.yml
crates/rtps-elements/src/: lib.rs
crates/rtps-idl/: Cargo.toml  build.rs
crates/rtps-idl/src/: ast.rs  lib.rs
crates/rtps-idl/templates/: module.j2  struct.j2  typedef.j2
docs/: dds-xtypes_discovery.idl
files/test-vectors/const_op_and/: expected.rs
files/test-vectors/const_op_div/: expected.rs
files/test-vectors/const_op_lshift/: expected.rs
files/test-vectors/const_op_mod/: expected.rs
files/test-vectors/const_op_mul/: expected.rs
files/test-vectors/const_op_or/: expected.rs
files/test-vectors/const_op_sub/: expected.rs
files/test-vectors/include_directive/: expected.rs
files/test-vectors/struct_members/: expected.rs
files/test-vectors/struct_module/: expected.rs
files/test-vectors/typedef_array_dim_2/: expected.rs
files/test-vectors/typedef_unsigned_short/: expected.rs
files/test-vectors/union_members/: expected.rs
omg-elements/: Cargo.toml  README.md  build.rs
omg-elements/files/dds/: DdsCollection.idl  DdsDcpsCore.idl  DdsDcpsDomain.idl  DdsDcpsGuid.idl  DdsDcpsInfoUtils.idl  DdsDcpsInfrastructure.idl  DdsDcpsPublication.idl  DdsDcpsSubscription.idl  DdsDcpsSubscriptionExt.idl  DdsDcpsTopic.idl  DdsDcpsTypeSupportExt.idl  RtpsCore.idl
omg-elements/src/: lib.rs
omg-idl/: Cargo.toml
omg-idl-code-gen/: Cargo.toml  README.md
omg-idl-code-gen/src/: ast.rs  lib.rs
omg-idl-code-gen/templates/: const.j2  enum.j2  module.j2  struct.j2  typedef.j2  union_switch.j2
omg-idl-gen/: Cargo.toml
omg-idl-gen/files/test-vectors/const_op_add/: expected.rs
omg-idl-gen/files/test-vectors/const_op_and/: expected.rs
omg-idl-gen/files/test-vectors/const_op_div/: expected.rs
omg-idl-gen/files/test-vectors/const_op_lshift/: expected.rs
omg-idl-gen/files/test-vectors/const_op_mod/: expected.rs
omg-idl-gen/files/test-vectors/const_op_mul/: expected.rs
omg-idl-gen/files/test-vectors/const_op_or/: expected.rs
omg-idl-gen/files/test-vectors/const_op_rshift/: expected.rs
omg-idl-gen/files/test-vectors/const_op_sub/: expected.rs
omg-idl-gen/files/test-vectors/const_op_xor/: expected.rs
omg-idl-gen/files/test-vectors/const_str/: expected.rs  input.idl
omg-idl-gen/files/test-vectors/double_module_depth/: expected.rs  input.idl
omg-idl-gen/files/test-vectors/enum_variants/: expected.rs  input.idl
omg-idl-gen/files/test-vectors/include_directive/: expected.rs
omg-idl-gen/files/test-vectors/module_use_diff_module/: expected.rs  input.idl
omg-idl-gen/files/test-vectors/struct_members/: expected.rs  input.idl
omg-idl-gen/files/test-vectors/struct_module/: expected.rs  input.idl
omg-idl-gen/files/test-vectors/typedef_array_dim_1/: expected.rs
omg-idl-gen/files/test-vectors/typedef_array_dim_2/: expected.rs
omg-idl-gen/files/test-vectors/typedef_char/: expected.rs
omg-idl-gen/files/test-vectors/typedef_long/: expected.rs
omg-idl-gen/files/test-vectors/typedef_long_long/: expected.rs
omg-idl-gen/files/test-vectors/typedef_octet/: expected.rs
omg-idl-gen/files/test-vectors/typedef_sequence/: expected.rs
omg-idl-gen/files/test-vectors/typedef_short/: expected.rs  input.idl
omg-idl-gen/files/test-vectors/typedef_string/: expected.rs
omg-idl-gen/files/test-vectors/typedef_unsigned_long/: expected.rs
omg-idl-gen/files/test-vectors/typedef_unsigned_long_long/: expected.rs
omg-idl-gen/files/test-vectors/typedef_unsigned_short/: expected.rs
omg-idl-gen/files/test-vectors/typedef_wchar/: expected.rs
omg-idl-gen/files/test-vectors/typedef_wstring/: expected.rs
omg-idl-gen/files/test-vectors/union_members/: expected.rs  input.idl
omg-idl-gen/src/: main.rs
omg-idl-gen/tests/: test_DdsDcpsGuid_idl.rs
omg-idl-grammar/: Cargo.toml  README.md
omg-idl-grammar/src/: lib.rs
omg-idl-grammar/src/grammar/: idl_v4.pest
omg-idl-grammar/tests/: test.rs
omg-idl/files/test-vectors/enum_variants/: input.idl
omg-idl/files/test-vectors/include_directive/: simple.idl
omg-idl/files/test-vectors/struct_module/: expected.rs
omg-idl/files/test-vectors/typedef_array_dim_1/: expected.rs
omg-idl/files/test-vectors/typedef_long_long/: expected.rs
omg-idl/files/test-vectors/typedef_octet/: input.idl
omg-idl/files/test-vectors/typedef_unsigned_short/: input.idl
omg-idl/files/test-vectors/union_members/: input.idl
omg-idl/src/: main.rs
rtps-elements/: Cargo.toml  build.rs
rtps-idl/: Cargo.toml
rtps-idl-code-gen/: Cargo.toml  build.rs
rtps-idl-code-gen/src/: ast.rs  lib.rs
rtps-idl-gen/: Cargo.toml
rtps-idl-gen/files/test-vectors/const_op_add/: expected.rs
rtps-idl-gen/files/test-vectors/enum_variants/: expected.rs
rtps-idl-gen/files/test-vectors/struct_members/: expected.rs
rtps-idl-gen/files/test-vectors/struct_module/: expected.rs
rtps-idl-gen/files/test-vectors/typedef_octet/: expected.rs
rtps-idl-gen/files/test-vectors/typedef_unsigned_long_long/: expected.rs
rtps-idl-gen/files/test-vectors/union_members/: expected.rs
rtps-idl-gen/src/: main.rs
rtps-idl-gen/tests/: test_DdsDcpsGuid_idl.rs
rtps-idl-grammar/: Cargo.toml
rtps-idl-grammar/tests/: test.rs
rtps-idl/src/: ast.rs
rtps-idl/templates/: enum.j2
src/: main.rs
tests/: test_DdsDcpsGuid_idl.rs
